--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.config.import=optional:file:.env[.properties]
-
 spring.application.name=JavaWeb
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/dog
 spring.datasource.url=jdbc:h2:file:./TestDataBase
@@ -14,3 +13,9 @@ spring.jpa.show-sql=true
 spring.mvc.view.prefix=classpath:/templates/
 spring.mvc.view.suffix=.html
 server.port=5000
+
+spring.security.oauth2.client.registration.github.client-id=Ov23liZojoHzxIdMhlMF
+#spring.security.oauth2.client.registration.github.client-secret=a4e6d4103094a1f6a5763f37052b30b17c6b943a
+spring.security.oauth2.client.registration.github.scope[0]=user:email
+# secret  a4e6d4103094a1f6a5763f37052b30b17c6b943a
+# client id   Ov23liZojoHzxIdMhlMF
