--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 GITHUB_CLIENT_ID=Ov23liZojoHzxIdMhlMF
 GITHUB_CLIENT_SECRET=a4e6d4103094a1f6a5763f37052b30b17c6b943a
+DB_USERNAME=postgres
+DB_PASSWORD=jensen2025
