--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,16 +1,17 @@
-spring.datasource.url=jdbc:postgresql://<database-1.c7ymeik8avc3.eu-north-1.rds.amazonaws.com>:5432/<database-1>
-spring.datasource.username=<postgresDb>
-spring.datasource.password=<jensen2025>
+spring.datasource.url=spring.datasource.url=jdbc:postgresql://database-1.c7ymeik8avc3.eu-north-1.rds.amazonaws.com:5432/postgres
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
 server.port=5000
 spring.profiles.active=prod
 
-# Security etc.
+# GitHub OAuth
 spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
 spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
 spring.security.oauth2.client.registration.github.scope[0]=user:email
