--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,17 +1,24 @@
-spring.datasource.url=spring.datasource.url=jdbc:postgresql://database-1.c7ymeik8avc3.eu-north-1.rds.amazonaws.com:5432/postgres
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.config.import=optional:file:.env[.properties]
+spring.application.name=JavaWeb
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/dog
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.hikari.password=hejsan123
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
-
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.jpa.show-sql=true
+spring.mvc.view.prefix=classpath:/templates/
+spring.mvc.view.suffix=.html
 server.port=5000
-spring.profiles.active=prod
 
-# GitHub OAuth
 spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
 spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
 spring.security.oauth2.client.registration.github.scope[0]=user:email
+# secret  a4e6d4103094a1f6a5763f37052b30b17c6b943a
+# client id   Ov23liZojoHzxIdMhlMF
