--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,24 +1,14 @@
 spring.config.import=optional:file:.env[.properties]
 spring.application.name=JavaWeb
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/dog
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.datasource.hikari.password=hejsan123
+
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.hikari.username=${DATASOURCE_USERNAME}
+spring.datasource.hikari.password=${DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-spring.jpa.show-sql=true
-spring.mvc.view.prefix=classpath:/templates/
-spring.mvc.view.suffix=.html
-server.port=5000
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
 spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
 spring.security.oauth2.client.registration.github.scope[0]=user:email
-# secret  a4e6d4103094a1f6a5763f37052b30b17c6b943a
-# client id   Ov23liZojoHzxIdMhlMF
+
+server.port=5000
