--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -5,7 +5,7 @@ spring.datasource.url=${DATASOURCE_URL}
 spring.datasource.hikari.username=${DATASOURCE_USERNAME}
 spring.datasource.hikari.password=${DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
 spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
